gcc/testsuite/rust/rustc/ui/rfcs/rfc-0000-never_patterns/ICE-119271-never-arm-attr-in-guard.rs
fn main() {}

fn attr_in_guard() {
    match None::<u32> {
        Some(!) // { dg-error ".E0658." "" { target *-*-* } }
// { dg-error ".E0658." "" { target *-*-* } .-1 }
            if #[deny(unused_mut)] // { dg-error ".E0658." "" { target *-*-* } }
            false // { dg-error "" "" { target *-*-* } }
    }
    match false {} // { dg-error ".E0004." "" { target *-*-* } }
}

